temp fix overflow

--- a/index.css
+++ b/index.css
@@ -1,8 +1,10 @@
 * {
+	width: 100vw;
 	box-sizing: border-box;
 	margin: 0px;
 	padding: 0px;
 	font-family: '微軟正黑體', 'Arial';
+	overflow: hidden;
 }
 
 header {
